Adiciona pastas do MVC

--- a/Nucleo/Nucleo.MVC/Nucleo.MVC.csproj
+++ b/Nucleo/Nucleo.MVC/Nucleo.MVC.csproj
@@ -42,5 +42,10 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controller\" />
+    <Folder Include="Model\" />
+    <Folder Include="View\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
