--- a/Nucleo/Nucleo/Nucleo.csproj
+++ b/Nucleo/Nucleo/Nucleo.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enumeradores\EnumeradorGravidadeDaTarefa.cs" />
     <Compile Include="Enumeradores\EnumeradorPrioridadeDaTarefa.cs" />
     <Compile Include="Enumeradores\EnumeradorSeguro.cs" />
     <Compile Include="Enumeradores\EnumeradorSituacaoDaTarefa.cs" />
