Adiciona classe de negócio;

--- a/Nucleo/Nucleo/Nucleo.csproj
+++ b/Nucleo/Nucleo/Nucleo.csproj
@@ -47,7 +47,9 @@
     <Compile Include="Enumeradores\EnumeradorSeguro.cs" />
     <Compile Include="Enumeradores\EnumeradorSituacaoDaTarefa.cs" />
     <Compile Include="Enumeradores\IEnumeradorSeguro.cs" />
+    <Compile Include="Negocio\Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
