--- a/Nucleo/Nucleo/Nucleo.csproj
+++ b/Nucleo/Nucleo/Nucleo.csproj
@@ -47,7 +47,11 @@
     <Compile Include="Enumeradores\EnumeradorSeguro.cs" />
     <Compile Include="Enumeradores\EnumeradorSituacaoDaTarefa.cs" />
     <Compile Include="Enumeradores\IEnumeradorSeguro.cs" />
+    <Compile Include="Negocio\Atividade.cs" />
+    <Compile Include="Negocio\Categoria.cs" />
     <Compile Include="Negocio\Login.cs" />
+    <Compile Include="Negocio\Projeto.cs" />
+    <Compile Include="Negocio\Tarefa.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
