--- a/Nucleo/Nucleo/Nucleo.csproj
+++ b/Nucleo/Nucleo/Nucleo.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Enumeradores\IEnumeradorSeguro.cs" />
     <Compile Include="Negocio\Atividade.cs" />
     <Compile Include="Negocio\Categoria.cs" />
+    <Compile Include="Negocio\EntidadeDeNegocio.cs" />
     <Compile Include="Negocio\IEntidadeDeNegocio.cs" />
     <Compile Include="Negocio\Login.cs" />
     <Compile Include="Negocio\Projeto.cs" />
