--- a/Nucleo/Nucleo/Nucleo.csproj
+++ b/Nucleo/Nucleo/Nucleo.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Negocio\IEntidadeDeNegocio.cs" />
     <Compile Include="Negocio\Login.cs" />
     <Compile Include="Negocio\Projeto.cs" />
+    <Compile Include="Negocio\SessaoUsuario.cs" />
     <Compile Include="Negocio\Tarefa.cs" />
     <Compile Include="Negocio\Usuario.cs" />
     <Compile Include="Processos\ProcessoCadastroDeUsuario.cs" />
