--- a/Nucleo/InterfacesVisuais/InterfacesVisuais.csproj
+++ b/Nucleo/InterfacesVisuais/InterfacesVisuais.csproj
@@ -64,6 +64,12 @@
     <Compile Include="frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmMinhasTarefas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMinhasTarefas.Designer.cs">
+      <DependentUpon>frmMinhasTarefas.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmMinhasTarefas.resx">
+      <DependentUpon>frmMinhasTarefas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPrincipal.resx">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
