--- a/Nucleo/InterfacesVisuais/InterfacesVisuais.csproj
+++ b/Nucleo/InterfacesVisuais/InterfacesVisuais.csproj
@@ -90,6 +90,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilitarios\HelperDataGrid.cs" />
     <EmbeddedResource Include="frmCadastroDeUsuario.resx">
       <DependentUpon>frmCadastroDeUsuario.cs</DependentUpon>
     </EmbeddedResource>
